enable aks on build pipeline